# LammSolvF

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fpm.toml  pyproject.toml
app/: main.f90
lammsolvflib/: __init__.py  lib.py  solver.py  typing.py
src/: CMakeLists.txt  api.f90  solver.f90  utils.f90
