[build-system]
requires = ["scikit-build-core", "numpy>=1.20", "fypp"]
build-backend = "scikit_build_core.build"

[project]
name = "lammsolvflib"
version = "0.1.0"
description = "Python interface to the SAWP Fortran solver"
authors = [{name = "Daniil Astapov", email = "daniil.astapov@aalto.fi"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["numpy>=1.20"]

[tool.scikit-build]
cmake.build-type = "Release"

[tool.cibuildwheel]
enable = ["cpython-freethreading"]
